[package]
name = "bottles-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bottles-core = { git = "https://github.com/bottlesdevs/next-core" }
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }

# [patch."https://github.com/bottlesdevs/next-core"]
# bottles-core = { path = "../next-core" }
