[package]
name = "bottles-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
bottles-core = { workspace = true }
clap = { version = "4.5.23", features = ["derive"] }
tokio = { workspace = true }
tracing-subscriber = "0.3.20"

# [patch."https://github.com/bottlesdevs/next-core"]
# bottles-core = { path = "../next-core" }
